--- a/css/generics/generic.footer.css
+++ b/css/generics/generic.footer.css
@@ -1,72 +1,12 @@
+/*
 
-* {
-  margin: 0;
-  padding: 0;
-  font-family: 'Titillium Web', sans-serif;
-}
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
+  ESSE ARQUIVO CONTEM O ESTILO PADRÃO DO RODAPÉ DO SITE, POR ISSO É CARREGADO
+  EM TODAS AS PÁGINAS.
 
-.main-menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 90%;
-  margin: 0 auto;
-}
-.lineOne, .lineTwo {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: space-around;
-}
-.square {
-  position: relative;
-  width: 99%;
-  height: 380px;
-  margin-top: 1%;
-  overflow: hidden;
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-.square img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  transition: 0.2s;
-  cursor: pointer;
-  object-fit: cover;
-  filter: blur(4px);
-}
-.square img:hover {
-  transition: 0.3s;
-  transform: scale(1.1);
-  filter: blur(0);
-}
+  PS: CASO SEJA NECESSÁRIO ALTERAR ALGO ESPECIFICO NO RODAPÉ DE UMA PÁGINA,
+  DEVE-SE USAR O ARQUIVO page.nomedapagina.css.
 
-.square:hover > a > h1 {
-  display: none;
-  transition: 0.3s;
-}
-
-.square > a > h1 {
-  font-weight: bolder;
-  letter-spacing: 15px;
-  display: block;
-  position: absolute;
-  width: 100%;
-  margin-top: 18%;
-  text-align: center;
-  font-size: 3.3em;
-  color: #fff;
-  z-index: 1;
-  transition: 0.3s;
-}
+*/
 
 .footer {
   margin-top: 4%;
@@ -76,7 +16,7 @@ html, body {
   display: block;
   width: 100%;
   height: 80%;
-  background: url('../imagens/footer_register.jpeg') center no-repeat;
+  background: url('../../imagens/footer_register.jpeg') center no-repeat;
   background-size: 100% auto;
 }
 .inputs-register {
