--- a/css/page.post.css
+++ b/css/page.post.css
@@ -26,8 +26,8 @@
 
  .openning-image { /*vai ser substituido por uma imagem */
   margin: 0 auto;
-  padding-top: 500px;
-  background-color: gray;
+  /* padding-top: 500px;
+  background-color: gray; */
   margin-top: 5%;
   margin-bottom: 5%;
   width: 90%;
@@ -46,8 +46,8 @@
 }
 
 .image{ /*vai ser substituido por uma imagem */
-  background-color: gray;
-  padding: 200px;
+  /* background-color: gray;
+  padding: 200px; */
   margin: 0 auto;
   margin-top: 5%;
   margin-bottom: 5%;
