--- a/css/generics/generic.aside.css
+++ b/css/generics/generic.aside.css
@@ -25,6 +25,8 @@
 }
 .aside-img {
   width: 100%;
+  border-radius: 3px;
+  overflow: hidden;
 }
 
 .aside-img img {
@@ -65,6 +67,7 @@
 .aside-publicacao {
   display: flex;
   margin: 1% 0;
+  padding: 0 3px;
 }
 
 .aside-footer-link {
