--- a/resources/views/pages/aplicativos.html
+++ b/resources/views/pages/aplicativos.html
@@ -18,11 +18,9 @@
     <title>Aplicativos - TecBlog</title>
   </head>
   <body>
-    <!-- BOTAO PARA SUBIR A PAGINA PARA O TOPO -->
-    <div id="moveUpIcon" class="moveUpIcon">
-      <div class="moveUpIconCircle" title="Ir para o topo">
-        <i class="fas fa-arrow-up fa-2x"></i>
-      </div>
+    <!-- BOTAO PARA MOVER PARA CIMA -->
+    <div id="moveUpIcon" class="moveUpIcon" title="Ir para o Topo">
+      <i class="fas fa-arrow-up fa-2x"></i>
     </div>
     
     <!-- MODAL PARA PRODUZIR OS VIDEOS -->
@@ -39,6 +37,35 @@
 
     <header class="header">
       <div>
+        <nav class="navigator-menu">
+          <div id="hamburger-button" class="hamburger-button">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div id="navigator-menu-list" class="navigator-menu-list">
+
+            <div>
+                <h1>Categorias</h1>
+                <ul>
+                  <li><a href="./aplicativos.html">Aplicativos</a></li>
+                  <li><a href="./smartphone.html">Smartphone</a></li>
+                  <li><a href="./games.html">Games</a></li>
+                  <li><a href="./hardware.html">Hardware</a></li>
+                </ul>
+            </div>
+
+            <div>
+                <h1>Contato</h1>
+                <ul>
+                  <li><a href="#">Seja um parceiro</a></li>
+                  <li><a href="#">Informe uma novidade</a></li>
+                  <li><a href="#">Nossas redes sociais</a></li>
+                </ul>
+            </div>
+            
+          </div>
+        </nav>
         <div class="header-title">
           <h1><a href="../../../index.html">TecBlog</a></h1>
         </div>
