--- a/resources/views/pages/games.html
+++ b/resources/views/pages/games.html
@@ -19,11 +19,9 @@
 
   <body>
   <!-- BOTAO PARA SUBIR A PAGINA PARA O TOPO -->
-    <div id="moveUpIcon" class="moveUpIcon">
-      <div class="moveUpIconCircle" title="Ir para o topo">
-        <i class="fas fa-arrow-up fa-2x"></i>
-      </div>
-    </div>
+  <div id="moveUpIcon" class="moveUpIcon" title="Ir para o Topo">
+    <i class="fas fa-arrow-up fa-2x"></i>
+  </div>
   
     <!-- MODAL PARA PRODUZIR OS VIDEOS -->
     <div id="modalPlayer" class="modalPlayer">
