--- a/resources/assets/css/generics/generic.footer.css
+++ b/resources/assets/css/generics/generic.footer.css
@@ -117,24 +117,20 @@
 
 .moveUpIcon {
   position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  bottom: -100px;
-  transition: 0.5s;
-  z-index: 2;
-}
-
-.moveUpIconCircle {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   padding: 10px;
-  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  right: 0;
+  bottom: -100px;
+  margin: 0 auto;
   background-color: rgba(0, 0, 0, 0.5);
   color: #fff;
+  transition: 0.5s;
+  cursor: pointer;
+  z-index: 2;
 }
