--- a/resources/assets/css/generics/generic.header.css
+++ b/resources/assets/css/generics/generic.header.css
@@ -33,6 +33,96 @@ html, body {
   background-color: rgb(225, 205, 111); /*amarelo*/
   z-index: 10;
 }
+
+.navigator-menu {
+  min-width: 40px;
+}
+
+.hamburger-button {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.hamburger-button span{
+  width: 30px;
+  height: 5px;
+  border-radius: 3px;
+  margin: 2px 0;
+  background-color: #f3f3f3;
+  transition: 0.5s;
+}
+
+/*.hamburger-button:hover span {
+  margin: 0;
+}
+
+.hamburger-button:hover :nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-button:hover :first-child {
+  position: absolute;
+  transform: rotate(-45deg);
+}
+
+.hamburger-button:hover :last-child {
+  position: absolute;
+  transform: rotate(45deg);
+}*/
+
+.navigator-menu-list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  position: absolute;
+  background-color: #f5f6fa;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  width: 20%;
+  max-height: 350px;
+  padding: 15px;
+  border-radius: 3px;
+  margin-top: 1%;
+  z-index: 5;
+  transition: 0.6s;
+  transform: translateX(-500px);
+}
+
+.navigator-menu-list > div h1 {
+  font-size: 1.1em;
+  color: #222;
+}
+
+.navigator-menu-list div:not(:first-child) h1{
+  margin-top: 3%;
+}
+
+.navigator-menu-list > div ul li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  line-height: 19px;
+}
+.navigator-menu-list > div ul li a {
+  padding-left: 10px;
+  text-decoration: none;
+  color: #222;
+  transition: 0.3s;
+}
+
+.navigator-menu-list > div ul li a:hover {
+  padding-left: 0;
+}
+
+.navigator-menu-list > div ul li a:hover {
+  color: #19275B;
+}
+
 .header > div:first-child {
   display: flex;
   justify-content: center;
@@ -44,6 +134,7 @@ html, body {
   display: inline-block;
 }
 .header-title {
+  padding-left: 28px;
   width: 50% !important;
 }
 
@@ -63,7 +154,7 @@ html, body {
   text-align: right;
 }
 .header-search input {
-  width: 22%;
+  width: 27%;
   padding: 5px;
   border: 1px solid #ccc;
   border-radius: 3px;
@@ -74,7 +165,7 @@ html, body {
 .header-search input:focus {
   transition: 0.7s;
   padding: 5px 10px;
-  width: 25%;
+  width: 35%;
 }
 
 .header-search i {
@@ -82,6 +173,7 @@ html, body {
   cursor: pointer;
 }
 .migalhas {
+  padding-left: 72px;
   margin-top: 10px;
 }
 .migalhas > div {
