--- a/resources/views/pages/hardware.html
+++ b/resources/views/pages/hardware.html
@@ -18,10 +18,8 @@
   </head>
   <body>
     <!-- BOTAO PARA SUBIR A PAGINA PARA O TOPO -->
-    <div id="moveUpIcon" class="moveUpIcon">
-      <div class="moveUpIconCircle" title="Ir para o topo">
-        <i class="fas fa-arrow-up fa-2x"></i>
-      </div>
+    <div id="moveUpIcon" class="moveUpIcon" title="Ir para o Topo">
+      <i class="fas fa-arrow-up fa-2x"></i>
     </div>
   
     <!-- MODAL PARA PRODUZIR OS VIDEOS -->
