--- a/resources/views/pages/smartphone.html
+++ b/resources/views/pages/smartphone.html
@@ -19,10 +19,8 @@
   <body>
 
     <!-- BOTAO PARA SUBIR A PAGINA PARA O TOPO -->
-    <div id="moveUpIcon" class="moveUpIcon">
-      <div class="moveUpIconCircle" title="Ir para o topo">
-        <i class="fas fa-arrow-up fa-2x"></i>
-      </div>
+    <div id="moveUpIcon" class="moveUpIcon" title="Ir para o Topo">
+      <i class="fas fa-arrow-up fa-2x"></i>
     </div>
 
     <!-- MODAL PARA PRODUZIR OS VIDEOS -->
