--- a/resources/views/postpages/games.post2.html
+++ b/resources/views/postpages/games.post2.html
@@ -16,10 +16,8 @@
   <body>
     
   <!-- BOTAO PARA SUBIR A PAGINA PARA O TOPO -->
-  <div id="moveUpIcon" class="moveUpIcon">
-    <div class="moveUpIconCircle" title="Ir para o topo">
-      <i class="fas fa-arrow-up fa-2x"></i>
-    </div>
+  <div id="moveUpIcon" class="moveUpIcon" title="Ir para o Topo">
+    <i class="fas fa-arrow-up fa-2x"></i>
   </div>
 
   <header class="header">
