--- a/resources/assets/css/generics/generic.header.css
+++ b/resources/assets/css/generics/generic.header.css
@@ -83,7 +83,7 @@ html, body {
   position: absolute;
   background-color: #f5f6fa;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-  width: 20%;
+  width: 15%;
   max-height: 350px;
   padding: 15px;
   border-radius: 3px;
@@ -138,9 +138,23 @@ html, body {
   width: 50% !important;
 }
 
+.header-title > h1 {
+  font-size: 2.2em;
+  margin: 0;
+  margin-bottom: 2px;
+}
+
 .header-title > h1 > a {
   text-decoration: none;
   color: rgb(12, 47, 89); /*azul escuro*/
+}
+
+.header-title > p {
+  font-size: 0.8em;
+  font-weight: 600;
+  line-height: 0;
+  margin: 0;
+  color:rgb(12, 47, 89); /*azul escuro*/
 }
 
 .title-page-header{
