--- a/resources/views/pages/aplicativos.html
+++ b/resources/views/pages/aplicativos.html
@@ -4,25 +4,49 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    
+
     <!-- CSS LOCAL -->
     <link rel="stylesheet" href="../../../resources/assets/css/generics/generic.header.css"/>
     <link rel="stylesheet" href="../../../resources/assets/css/generics/generic.posts.css"/>
     <link rel="stylesheet" href="../../../resources/assets/css/generics/generic.aside.css"/>
     <link rel="stylesheet" href="../../../resources/assets/css/generics/generic.footer.css"/>
     <link rel="stylesheet" href="../../../resources/assets/css/generics/modal.player.css"/>
-    
+
     <link rel="stylesheet" href="../../../resources/assets/css/page.games.css"/>
     <link rel="stylesheet" href="../../../resources/assets/css/media.screen.css"/>
-    
+
     <title>Aplicativos - TecBlog</title>
   </head>
   <body>
+    <!-- BARRA LATERAL -->
+    <div class="asideBar">
+      <div>
+        <a href="#">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+      </div>
+      <div>
+        <a href="#">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+      <div>
+        <a href="#">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+      </div>
+      <div>
+        <a href="#">
+          <i class="far fa-envelope-open"></i>
+        </a>
+      </div>
+    </div>
+
     <!-- BOTAO PARA MOVER PARA CIMA -->
     <div id="moveUpIcon" class="moveUpIcon" title="Ir para o Topo">
       <i class="fas fa-arrow-up fa-2x"></i>
     </div>
-    
+
     <!-- MODAL PARA PRODUZIR OS VIDEOS -->
     <div id="modalPlayer" class="modalPlayer">
       <div class="modalPlayerClose">
@@ -54,7 +78,7 @@
                   <li><a href="./hardware.html">Hardware</a></li>
                 </ul>
             </div>
-            
+
           </div>
         </nav>
         <div class="header-title">
