--- a/resources/views/pages/aplicativos.html
+++ b/resources/views/pages/aplicativos.html
@@ -85,7 +85,7 @@
           <h1><a href="../../../index.html">TecBlog</a></h1>
         </div>
         <div class="title-page-header">
-          <h1>APLICATIVOS</h1>
+          <h1><a href="../pages/aplicativos.html">APLICATIVOS</a></h1>
         </div>
         <div class="header-search">
           <input type="text" name="search" placeholder="O que deseja procurar?" value="">
@@ -122,7 +122,7 @@
                 De acordo com a WABetaInfo, o Whatsapp está testando uma nova função que vai facilitar bastante adicionar novos contatos à lista atual.
               </p>
               <p class="texto-p-footer">
-                ONTEM - EM WHATSAPP
+                HÁ 10 HORAS - EM WHATSAPP
               </p>
             </div>
           </div>
@@ -142,7 +142,7 @@
                 O mais recente lançamento do Telegram: 20 pacotes de adesivos para incrementar a biblioteca do rival WhatsApp.
               </p>
               <p class="texto-p-footer">
-                HÁ 10 HORAS - EM TELEGRAM
+                HÁ 12 HORAS - EM TELEGRAM
               </p>
             </div>
           </div>
@@ -161,7 +161,7 @@
               <p class="texto-p-main">
                 O Google Maps vai estrear uma novidade na maneira em que mantemos contato com locais onde gostamos de ir, como restaurantes, casas de show e outros comércios.              </p>
               <p class="texto-p-footer">
-                HÁ 11 HORAS - EM GOOGLE
+                HÁ 17 HORAS - EM GOOGLE
               </p>
             </div>
           </div>
@@ -181,7 +181,7 @@
                 Likewise, um aplicativo que reúne recomendações de pessoas que você conhece e/ou nas quais confia.
               </p>
               <p class="texto-p-footer">
-                HÁ 11 HORAS - EM LANÇAMENTOS
+                ONTEM - EM LANÇAMENTOS
               </p>
             </div>
           </div>
