--- a/resources/assets/css/generics/generic.header.css
+++ b/resources/assets/css/generics/generic.header.css
@@ -157,8 +157,17 @@ html, body {
   color:rgb(12, 47, 89); /*azul escuro*/
 }
 
+.header-title{
+  display: none;
+}
+
 .title-page-header{
   color: rgb(12, 47, 89); /*azul escuro*/
+}
+
+.title-page-header a{
+  text-decoration: none;
+  color: rgb(12, 47, 89);
 }
 
 .header-search {
@@ -183,7 +192,12 @@ html, body {
 }
 
 .header-search i {
-  color: rgb(12, 47, 89);
+  padding: 1.5%;
+  border-radius: 5px;
+  background-color: #4e6786;
+  color: #f3f3f3;
+  border-bottom: 1px solid gray;
+  border-right: 1px solid gray;
   cursor: pointer;
 }
 .migalhas {
